# dirent

./: CMakeLists.txt
cmake/: dirent-config.cmake
